--- a/writing/paper.tex
+++ b/writing/paper.tex
@@ -31,52 +31,39 @@
 }
 
 % set the author, title, and date of the document. \maketitle adds it to the document.
-\author{Nathan Hattersley}
-\title{My Paper on NLSY97 Data}
+\author{Elle Boodsakorn}
+\title{My Paper on incarcerations Data}
 \date{Sping 2022}
 
 \begin{document}
 \maketitle
 
-\section{The First Section}
+\section{Introduction}
 
-This is where I talk about basic \LaTeX. Using the \texttt{parskip} package, I can create a new paragraph by using line breaks, which I will do now.
-
-I can also make cool equations inline by using parentheses{\textemdash}like this: \(x + 2\){\textemdash}or by using single dollar signs{\textemdash}like this: $x+2$. Parentheses are preferred because the left and right delimiter are distinct.
-
-I can make cool equations in a block style by using the \texttt{equation} environment like so:
-\begin{equation*}
-    y = x\beta + \varepsilon
-\end{equation*}
-or by using double dollar signs:
-$$
-    y = x\beta + \varepsilon
-$$
-
-Again, the \texttt{equation} environment is preferred because the begin and end delimiters are different.
-
-I can also add a bibliography, but this is beyond the scope of our discussion right now. Overleaf has plenty of resources for this on their \href{https://www.overleaf.com/learn}{website}. Another good place to look for LaTeX help is the \href{https://en.wikibooks.org/wiki/LaTeX}{WikiBook} on it.
+This paper analyzes incarceration data in 2002. The variable \texttt{incarcerated} is assigned to 1 if the person was incarcerated and 0 otherwise. Then, I calculate total incarcerations by race and gender. Section 2 presents a bar graph of total number of incarcerations in 2002 by race and gender, a table of total number of incarcerations, and a regression table.
 
 \newpage
 
-\section{The Second Section}
+\section{Data}
 
-Wherein we do tables and graphs. To include the graph we made in ggplot, we create the \texttt{figure} environment. The `H' option tells LaTeX to `hold' the position of the figure instead of positioning it somewhere else. I use the \texttt{caption} command to add a caption{\textemdash}although I also put a title on the plot in ggplot so you would typically choose one or the other. I use the \texttt{label} command after the caption to add a label. Then in my paper I can use the \texttt{ref} command and LaTeX knows I am referring to Figure \ref{fig:graph}.
+Figure ~\ref{fig:graph} presents the total number of incarceration in 2002 categorized by race and gender. From the graph, we see that male were incarcerated a lot more than female for all race. Black male were incarcerated the most followed by Non-Black/Non-Hispanic and Hispanic respectively.
 
 
 \begin{figure}[H]
     \begin{center}
-        \includegraphics[width=.85\textwidth]{arrests_by_racegender}
+        \includegraphics[width=.85\textwidth]{incarcerations_by_racegender}
     \end{center}
-    \caption{Mean Number of Arrests in 2002 by Race and Gender (this is the LaTeX caption, not the ggplot title)}
+    \caption{Total Number of Incarceration in 2002 by Race and Gender}
     \label{fig:graph}
 \end{figure}
 
 
-Tables are somewhat easier, since \texttt{kableExtra} and \texttt{stargazer} generate LaTeX code that is ready to just ``copy-paste'' into our document. The \texttt{label} argument in the R code is the label that the table will have in the tex output, if you want to \texttt{ref} it.
+The table below shows total number of incarcerations by race and gender.
 
-\input{../tables/arrests_by_racegender.tex}
+\input{../tables/incarcerations_by_racegender.tex}
 
-\input{../tables/regress_arrests_by_racegender.tex}
+Table 2 presents the regression output regressing \texttt{incarcerations in 2002} on race and gender. The constant term reflects the probability of being incarcerated in 2002 for black female (base group). The coefficient -0.014 on Hispanic means that for female hispanic, the probability of being incarcerated is 1.4 percentage points lower than that of black female
+
+\input{../tables/regress_incarcerations_by_racegender.tex}
 
 \end{document}
