--- a/writing/HiddenCurriculum.tex
+++ b/writing/HiddenCurriculum.tex
@@ -61,8 +61,8 @@ For instance, one might expect Black males and females to have the longest avera
 
 \section{Tables}
 
-\input{/Users/arpanchatterji/Desktop/Causal Inference/causal-inference-2022/tables/incar_length_by_racegender.tex}
+\input{../tables/incar_length_by_racegender.tex}
 
-\input{/Users/arpanchatterji/Desktop/Causal Inference/causal-inference-2022/tables/regress_incar_length_by_racegender.tex}
+\input{../tables/regress_incar_length_by_racegender.tex}
 
 \end{document}
